syntax = "proto3";

package com.master.server;

message WorkerInfo {
  string ip = 1;
  uint32 port = 2;
  bool isShuffle = 3;
}

message Version {
  uint32 version = 1;
}

message RegisterRequest{
  WorkerInfo workerInfo = 1;
  bool isShuffle = 2;
}

message RegisterReply {
  repeated WorkerInfo workerInfos = 1;
  Version version = 2;
}

message SampleKeyData {
  string ip = 1;   // 샘플 보낸 워커의 ip를 담아야 getPartitionRange에서 웨리포 풀 조건 작성 가능함

  message Key {
    bytes keyDatum = 1;
  }
  repeated Key keyData = 2;
}

message PartitionRanges {
  // [startKey, endKey) === (startKey <= key < endKey)
  message PartitionRange {
    bytes startKey = 1;
    bytes endKey = 2;
  }
  repeated PartitionRange PartitionRanges = 1;
}

message Ip {
  string ip = 1;
}

message CanShutdownWorkerServerReply {
  bool canShutdownWorkerServer = 1;
}

service MasterServer {
  rpc register (RegisterRequest) returns (RegisterReply);
  rpc getPartitionRange (SampleKeyData) returns (PartitionRanges);
  // rpc getUpdatedWorkerInfo (Version) returns (WorkerInfo);
  rpc canShutdownWorkerServer (Ip) returns (CanShutdownWorkerServerReply);
}